[project]
name = "ComfyUI-TKVideoZoom"
description = "Various Zoom/Slide/Spin/Wobble/Materialize effects for Video"
version = "1.10"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/trashkollector/TKVideoZoom"

[tool.comfy]
PublisherId = "trashkollector"
DisplayName = "ComfyUI-TKVideoZoom"
Icon = ""

