[project]
name = "ComfyUI-TKVideoZoom"
description = "TKVideoZoom - various video effects (zoom,slide,spin,etc), TKVideoSmoothLooper, TKVideoSpeedZones."
version = "1.13"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/trashkollector/TKVideoZoom"

[tool.comfy]
PublisherId = "trashkollector"
DisplayName = "ComfyUI-TKVideoZoom"
Icon = ""

